

# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

# ===================================================================
#  cython 用のソースファイルの設定
# ===================================================================

set ( CYTHON_SOURCES
  ym_common_cy.pyx
  )

set_source_files_properties (
  ${CYTHON_SOURCES}
  PROPERTIES CYTHON_IS_CXX TRUE
  )


# ===================================================================
#  module ターゲットの設定
# ===================================================================

cython_add_module ( ym_common_cy
  ${CYTHON_SOURCES}
  )

target_compile_options ( ym_common_cy
  PRIVATE "-O3"
  )

target_compile_definitions ( ym_common_cy
  PRIVATE "-DNDEBUG"
  )

target_link_libraries ( ym_common_cy
  ym_common
  )

install (TARGETS
  ym_common_cy
  DESTINATION lib/python/ym_common
  )
