

# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

# ===================================================================
#  cython 用のソースファイルの設定
# ===================================================================

set ( CYTHON_SOURCES
  ym_base_cy.pyx
  )

set_source_files_properties (
  ${CYTHON_SOURCES}
  PROPERTIES CYTHON_IS_CXX TRUE
  )


# ===================================================================
#  module ターゲットの設定
# ===================================================================

cython_add_module ( ym_base_cy
  ${CYTHON_SOURCES}
  )

target_compile_options ( ym_base_cy
  PRIVATE "-O3"
  )

target_compile_definitions ( ym_base_cy
  PRIVATE "-DNDEBUG"
  )

target_link_libraries ( ym_base_cy
  ym_base
  )

install (TARGETS
  ym_base_cy
  DESTINATION lib/python/ym_base
  )
