
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ${GTEST_INCLUDE_DIR}
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================


# ===================================================================
#  ソースファイルの設定
# ===================================================================



# ===================================================================
#  テスト用のターゲットの設定
# ===================================================================

add_executable ( CombiGenTest
  gen/CombiGenTest.cc
  $<TARGET_OBJECTS:ym_base_d>
  )

target_compile_options ( CombiGenTest
  PRIVATE "-g"
  )

target_link_libraries ( CombiGenTest
  ${YM_LIB_DEPENDS}
  pthread
  ${GTEST_BOTH_LIBRARIES}
  )

add_test ( CombiGenTest
  CombiGenTest
  )
