
# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ${Python3_INCLUDE_DIRS}
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set ( py_ymbase_SOURCES
  PyMt19937.cc
  PyJsonValue.cc
  ymbase_module.cc
  )


# ===================================================================
#  executable ターゲットの設定
# ===================================================================

ym_add_object_library( py_ymbase
  ${py_ymbase_SOURCES}
  )

add_library ( py_ymbaselib
  SHARED
  $<TARGET_OBJECTS:py_ymbase_obj>
  $<TARGET_OBJECTS:ym_base_obj>
  )

set_target_properties( py_ymbaselib
  PROPERTIES
  PREFIX ""
  OUTPUT_NAME "ymbase"
  )

target_link_libraries( py_ymbaselib
  ${YM_LIB_DEPENDS}
  ${Python3_LIBRARIES}
  )

# ===================================================================
# テストターゲット
# ===================================================================
