# ===================================================================
# CMAKE のおまじない
# ===================================================================


# ===================================================================
# プロジェクト名，バージョンの設定
# ===================================================================


# ===================================================================
# オプション
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================

# ===================================================================
# ヘッダファイルの生成
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( gtest )


# ===================================================================
#  ソースの設定
# ===================================================================

set ( json_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/JsonValue.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/JsonObj.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/JsonParser.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/JsonScanner.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================
